responsive fixes for buttons and tables. improved contrast in footer text. revamped table responsive styles to make it multilingual compatible

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,21 @@
 //flat-ui
 @import "resources/assets/css/flat-ui";
 
+// styles from master.blade
+body {
+	font-family: 'Abhaya Libre', serif;
+	padding-top: 95px;
+}
+
+.main-container {
+    min-height: 600px;
+}
+
+footer {
+    margin-top: 80px;
+    color: #666;
+}
+
 //custom
 .hero {
 	h3 {
@@ -32,39 +47,40 @@
 
 //responsive tables
 @media (max-width: 480px) {
-	.table-responsive { 
+	#needs-table, #donations-table { 
+		border: 0;
 		thead { display: none; }
-		td { 
-			display: block;
-			&:before {
-			    display: block;
-			    font-size: 80%;
-			    color: #999;
-			} 
-		}
-		&#needs-table {
-			td:nth-of-type(1):before { content: "නම"; }
-			td:nth-of-type(2):before { content: "අවශ්‍යතා"; }
-			td:nth-of-type(3):before { content: "ලිපිනය"; }	
-			td:nth-of-type(4):before { content: "නගරය"; }	
-			td:nth-of-type(5):before { content: "දුරකථන"; }	
-			td:nth-of-type(6):before { content: "පිරිස	"; }
-			td:nth-of-type(7):before { content: "ඇතුල්කලේ"; }
-		}
-		&#donations-table {
-			td:nth-of-type(1):before { content: "නම"; }
-			td:nth-of-type(2):before { content: "ආධාරය"; }
-			td:nth-of-type(3):before { content: "ලිපිනය"; }	
-			td:nth-of-type(4):before { content: "නගරය"; }	
-			td:nth-of-type(5):before { content: "දුරකථන"; }	
-			td:nth-of-type(6):before { content: "ඇතුල්කලේ"; }
+		tbody {
+			tr {
+				th {
+					display: block;
+					line-height: 1.2;
+					border: none;
+				}
+				td { 
+					display: block;
+					line-height: 1.2;
+					border: solid #ddd;
+					border-width: 1px 1px 0;
+					&:last-child {
+						border-bottom-width: 1px;
+						margin-bottom: 10px;
+					}
+					&:before {
+					    display: block;
+					    font-size: 80%;
+					    color: #666;
+						content: attr(data-xs-label);
+					}
+				}
+			}
 		}
 	}
-}
+	.btn-mobile-block {
+	    white-space: normal;
+	}
 
-//footer mobile fix 
-
-@media (max-width: 480px) {
+	//footer mobile fix 
 	.footer-banner {
 		margin-left: 0;
 	}
